--- a/Capstone/Capstone/MainWindow.xaml
+++ b/Capstone/Capstone/MainWindow.xaml
@@ -13,11 +13,13 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="PriceR" Height="450" Width="800">
+        Title="Buggy" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0"/>
+            <ColumnDefinition Width="0"/>
+            <ColumnDefinition Width="104.12"/>
+            <ColumnDefinition/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -25,7 +27,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column="0" Grid.RowSpan="2" Background="#202020">
+        <Grid Grid.Column="0" Grid.RowSpan="2" Background="#202020" Grid.ColumnSpan="3">
 
 
             <Grid.RowDefinitions>
@@ -34,14 +36,8 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Text="Maybe logo goes here?"
-                       Foreground="White" 
-                       TextWrapping="Wrap" 
-                       Width="80" Margin="10" 
-                       FontSize="15" FontWeight="Bold"/>
-
-            <StackPanel Orientation="Vertical" Grid.Row="1">
-                <Button materialDesign:ButtonAssist.CornerRadius="0" Foreground="White" BorderThickness="0"
+            <StackPanel x:Name="NavPanel" Orientation="Vertical" Grid.Row="2">
+                <Button x:Name="NewItemButton" materialDesign:ButtonAssist.CornerRadius="0" Foreground="White" BorderThickness="0"
                     Height="25" HorizontalContentAlignment="Left" Background="#303030">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <materialDesign:PackIcon Kind="Magnify" Margin="0, 0, 5, 0"/>
@@ -57,19 +53,30 @@
                 </Button>
             </StackPanel>
 
-            <Button materialDesign:ButtonAssist.CornerRadius="0"
+            <Button x:Name="SettingsButton" materialDesign:ButtonAssist.CornerRadius="0"
                     Foreground="White" BorderThickness="0"
-                    Height="25" HorizontalContentAlignment="Left"
+                    Height="25" HorizontalContentAlignment="Center"
                     Background="#303030" VerticalAlignment="Bottom"
-                    Grid.Row="2">
+                    Grid.Row="2" Margin="0,0,0,30" Click="SettingsButton_Click_1">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Cog" Margin="0, 0, 5, 0"/>
                     <TextBlock Text="Settings" FontSize="12"/>
                 </StackPanel>
             </Button>
+            <Button x:Name="AboutButton" materialDesign:ButtonAssist.CornerRadius="0"
+                    Foreground="White" BorderThickness="0"
+                    Height="25" HorizontalContentAlignment="Center"
+                    Background="#303030" VerticalAlignment="Bottom"
+                    Grid.Row="2">
+                <StackPanel Orientation="Horizontal">
+                    <materialDesign:PackIcon Kind="About" Margin="0, 0, 5, 0"/>
+                    <TextBlock Text="About" FontSize="12"/>
+                </StackPanel>
+            </Button>
+            <Image HorizontalAlignment="Center" Height="59" Grid.Row="1" VerticalAlignment="Top" Width="100" Source="/Resources/BuggyLogo.png"/>
 
         </Grid>
-        <Grid Grid.Column="1" VerticalAlignment="Stretch" Grid.RowSpan="2">
+        <Grid Grid.Column="3" Grid.RowSpan="2" Margin="18,0,0,0">
 
 
             <Grid.RowDefinitions>
@@ -89,9 +96,10 @@
                     PreviewKeyDown="SearchTextBox_OnPreviewKeyDown"
                     Foreground="White"
                     VerticalContentAlignment="Bottom"
-                    materialDesign:HintAssist.Hint="Product Name"
+                    materialDesign:HintAssist.Hint="Search by keyword..."
                     materialDesign:HintAssist.HelperText="ex: IPhone 13">
                 </TextBox>
+
             </StackPanel>
 
             <Separator Grid.Row="1" VerticalAlignment="Bottom" 
@@ -120,6 +128,12 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </ScrollViewer>
+            <Button x:Name="SearchOptionsButton" HorizontalAlignment="Left" Margin="189,10,0,0" Grid.Row="1" VerticalAlignment="Top" Opacity="1" Height="22" BorderBrush="#FFEAEAEA" Background="#FF3E3E3E" Foreground="#DDFFFFFF" Width="145">
+                <StackPanel Orientation="Horizontal">
+                    <materialDesign:PackIcon Kind="ClipboardFlow" Foreground="White"/>
+                    <Label Content="Search Options" Height="19" FontSize="12" VerticalAlignment="Bottom"/>
+                </StackPanel>
+            </Button>
         </Grid>
 
     </Grid>
