--- a/Capstone/Capstone/MainWindow.xaml
+++ b/Capstone/Capstone/MainWindow.xaml
@@ -14,6 +14,9 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Buggy" Height="450" Width="800">
+    <Window.Resources>
+        
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0"/>
@@ -57,7 +60,7 @@
                     Foreground="White" BorderThickness="0"
                     Height="25" HorizontalContentAlignment="Center"
                     Background="#303030" VerticalAlignment="Bottom"
-                    Grid.Row="2" Margin="0,0,0,30" Click="SettingsButton_Click_1">
+                    Grid.Row="2" Margin="0,0,0,30" Click="SettingsButton_Click">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="Cog" Margin="0, 0, 5, 0"/>
                     <TextBlock Text="Settings" FontSize="12"/>
@@ -108,7 +111,7 @@
 
 
             <ScrollViewer Grid.Row="2">
-                <ListBox ItemsSource="{Binding Products}">
+                <ListBox x:Name="ProductsList" ItemsSource="{Binding Products}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid>
@@ -128,12 +131,34 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </ScrollViewer>
-            <Button x:Name="SearchOptionsButton" HorizontalAlignment="Left" Margin="189,10,0,0" Grid.Row="1" VerticalAlignment="Top" Opacity="1" Height="22" BorderBrush="#FFEAEAEA" Background="#FF3E3E3E" Foreground="#DDFFFFFF" Width="145">
+            <!--
+            <Button x:Name="SearchOptionsButton" HorizontalAlignment="Left" Margin="189,10,0,0" Grid.Row="1" VerticalAlignment="Top" Height="22" BorderBrush="#FFEAEAEA" Background="#FF3E3E3E" Foreground="#DDFFFFFF" Width="145">
                 <StackPanel Orientation="Horizontal">
                     <materialDesign:PackIcon Kind="ClipboardFlow" Foreground="White"/>
                     <Label Content="Search Options" Height="19" FontSize="12" VerticalAlignment="Bottom"/>
                 </StackPanel>
-            </Button>
+            </Button> 
+            -->
+            <Menu Grid.Row="1" VerticalAlignment="Top" Width="250" HorizontalAlignment="Left" Margin="180,0,0,0">
+                <MenuItem Header="Search Options" Width="250">
+                    <MenuItem Header="Show search options here" >
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Enable component?"/>
+                            <CheckBox/>
+                        </StackPanel>
+                    </MenuItem>
+                    <MenuItem Header="Range">
+                        <WrapPanel Orientation="Vertical">
+                            <Label Content="Enter a range:"/>
+                            <WrapPanel Orientation="Horizontal">
+                                <TextBox Width="40"/>
+                                <Label Content=" - "/>
+                                <TextBox Width="40"/>
+                            </WrapPanel>
+                        </WrapPanel>
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
         </Grid>
 
     </Grid>
